# cap-array-sim

./: CMakeLists.txt  LICENSE  project.sublime-workspace  workspace.sublime-workspace
include/: BalancerSystem.hpp  CapArray.hpp  CapArraySystem.hpp  Capacitor.hpp  Circuit.hpp  Clock.hpp  ClockSystem.hpp  Config.hpp.in  ConstCurrentSourceSystem.hpp  CurrentRedistSystem.hpp  DrainSystem.hpp  Helpers.hpp  NetworkManager.hpp  Node.hpp  OverCurrent.hpp  OverCurrentEvent.hpp  PowerLink.hpp  SerialArray.hpp  Source.hpp  Sources.hpp  Terminal.hpp  Terminals.hpp  Types.hpp  arraysystem.hpp  balancersystem.hpp  capacitor.hpp  caparray.hpp  connection.hpp  helper.hpp  helpers.hpp  serialarray.hpp  source.hpp  sourcesystem.hpp  terminal.hpp
python/: supercap_update_func_test.py
src/: BalancerSystem.cc  CapArraySystem.cc  Capacitor.cc  Circuit.cc  ClockSystem.cc  ConstCurrentSourceSystem.cc  DrainSystem.cc  Helpers.cc  NetworkManager.cc  Source.cc  Terminals.cc  arraysystem.cc  balancersystem.cc  cap_array_sim.cc  capacitor.cc  circuit.cc  connection.cc  drainsystem.cc  helpers.cc  source.cc  sourcesystem.cc  terminal.cc  test.cc
